--- a/nginx-sample/index.html
+++ b/nginx-sample/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <!-- TODO: Replace port number -->
-    <h2>Nginx reverse proxy server listening on port YY for incoming HTTP requets.</h2>
+    <h2>Nginx reverse proxy server listening on port 80 for incoming HTTP requets.</h2>
     <!-- TODO: Insert Name here -->
-    <p1>Done by: XXX </p1>
+    <p1>Done by: Xu Bowen A0227126L </p1>
 </body>
 </html>
