--- a/app/public/index.html
+++ b/app/public/index.html
@@ -153,10 +153,10 @@
             <div class="subtitle">Looks like you've successfully rendered the 404 page</div>
             <br>
             <!-- TODO: Add your matric no. here-->
-            <div class="subtitle">Matric No.: </div>
+            <div class="subtitle">Matric No.: A0227126L</div>
             <br>
             <!-- TODO: Add your name here-->
-            <div class="subtitle">Name: </div>
+            <div class="subtitle">Name: Xu Bowen</div>
             <br>
     </div>
     </section>
